update format in data files http://lean.xiaojukeji.com/project/ULTRON_REQ-1026/board